--- a/css/main.css
+++ b/css/main.css
@@ -47,27 +47,11 @@ body {
 
 }
 
-.btn {
-  background-color: #990073;
-  border-style: solid;
-  border-color: #990073;
-  color: #c09;
-  padding: 10px;
-  position: absolute;
-  left: 170px;
-  top: 350px;
-
-}
-
-.btn:hover {
-  color: white;
-}
-
 h1 {
   color: #990073;
   padding-top: 5rem;
   transform: rotate(-10deg);
-  text-shadow: 1px;
+  text-shadow: 0px 1px 5px white;
 
 }
 
@@ -75,6 +59,25 @@ h2 {
   color: #c09;
   padding-left: 1.3rem;
   transform: rotate(-4deg);
+
+}
+
+.btn {
+  border-style: solid;
+  border-color: #990073;
+  color: #c09;
+  padding: 10px 20px;
+  position: absolute;
+  left: 170px;
+  top: 350px;
+
+}
+
+.btn-ghost:hover {
+  border: 3px;
+  border-style: solid;
+  border-color: #990073;
+  color: #c09;
 
 }
 
@@ -113,7 +116,7 @@ h2 {
 }
 
 .chocolate-chip {
-  animation: drop 3s linear;
+  animation: drop 3s ease-in;
 
 }
 
@@ -130,7 +133,7 @@ h2 {
 }
 
 .vanilla-fudge {
-  animation: drop 4s linear;
+  animation: drop 4s ease-in;
 
 }
 
