Add opacity to animation

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ h1 {
   color: #990073;
   padding-top: 5rem;
   transform: rotate(-10deg);
-  text-shadow: 0rem 1rem 5rem white;
+
 }
 
 h2 {
@@ -50,23 +50,22 @@ h2 {
 
 }
 
-.red{
-  animation: appear 1s linear;
+.red {
+  text-shadow: 0rem 1rem 5rem white;
+  animation: blur 4s linear;
 
 }
 
-@keyframes appear {
+@keyframes blur {
 
-  start {
-    filter: blur(20px) opacity(5%);
+  from {
+    filter: blur(20px) opacity(10%);
   }
 
-  end {
-    filter: blur(0px) opacity(10%);
+  to {
+    filter: blur(0px) opacity(100%);
   }
-
 }
-
 
 .cone {
   bottom: calc(50% - 325px);
